hphp/hack/test/typecheck/needs_concrete/needs_concrete_8.php.exp
ERROR: File "needs_concrete_8.php", line 15, characters 13-13:
Cannot call `C::m` (a `<<__NeedsConcrete>>` method) via `parent`. It requires `static` to refer to a concrete class, but `parent` sets `static` to a class that may not be concrete. (Typing[4490])
  File "needs_concrete_8.php", line 6, characters 26-26:
  Declaration is here
